# WeDPR-Lab-Core-Web-Version

./: README.md
solution/verifiable_confidential_ledger/: Cargo.toml
solution/verifiable_confidential_ledger/src/: main.rs  mian.rs  vcl.rs
