[package]
name = "verifiable_confidential_ledger"
version = "1.0.0"
authors = ["WeDPR <wedpr@webank.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = "0.4.5" 
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# for web↑
colored = "1.8"
curve25519-dalek = { version = "1", features = ["serde"] }
wedpr_crypto = { path = "../../crypto/" }
wedpr_macros = { path = "../../common/macros/" }
wedpr_protos = { path = "../../common/protos/" }
wedpr_utils = { path = "../../common/utils" }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]
# for web↑

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "vcl"
harness = false
